# api/review/v1/review.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: api/review/v1/review.proto
+// source: review/v1/review.proto
 
 package v1
 
@@ -779,6 +779,514 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = TestConnReplyValidationError{}
+
+// Validate checks the field values on AppealReviewRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *AppealReviewRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on AppealReviewRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// AppealReviewRequestMultiError, or nil if none found.
+func (m *AppealReviewRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *AppealReviewRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if m.GetReviewId() <= 0 {
+		err := AppealReviewRequestValidationError{
+			field:  "ReviewId",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.GetStoreId() <= 0 {
+		err := AppealReviewRequestValidationError{
+			field:  "StoreId",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if l := utf8.RuneCountInString(m.GetContent()); l < 2 || l > 200 {
+		err := AppealReviewRequestValidationError{
+			field:  "Content",
+			reason: "value length must be between 2 and 200 runes, inclusive",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	// no validation rules for PicInfo
+
+	// no validation rules for VideoInfo
+
+	// no validation rules for OpUser
+
+	// no validation rules for Reason
+
+	if len(errors) > 0 {
+		return AppealReviewRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// AppealReviewRequestMultiError is an error wrapping multiple validation
+// errors returned by AppealReviewRequest.ValidateAll() if the designated
+// constraints aren't met.
+type AppealReviewRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m AppealReviewRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m AppealReviewRequestMultiError) AllErrors() []error { return m }
+
+// AppealReviewRequestValidationError is the validation error returned by
+// AppealReviewRequest.Validate if the designated constraints aren't met.
+type AppealReviewRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e AppealReviewRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e AppealReviewRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e AppealReviewRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e AppealReviewRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e AppealReviewRequestValidationError) ErrorName() string {
+	return "AppealReviewRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e AppealReviewRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sAppealReviewRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = AppealReviewRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = AppealReviewRequestValidationError{}
+
+// Validate checks the field values on AppealReviewReply with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *AppealReviewReply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on AppealReviewReply with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// AppealReviewReplyMultiError, or nil if none found.
+func (m *AppealReviewReply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *AppealReviewReply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for AppealId
+
+	if len(errors) > 0 {
+		return AppealReviewReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// AppealReviewReplyMultiError is an error wrapping multiple validation errors
+// returned by AppealReviewReply.ValidateAll() if the designated constraints
+// aren't met.
+type AppealReviewReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m AppealReviewReplyMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m AppealReviewReplyMultiError) AllErrors() []error { return m }
+
+// AppealReviewReplyValidationError is the validation error returned by
+// AppealReviewReply.Validate if the designated constraints aren't met.
+type AppealReviewReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e AppealReviewReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e AppealReviewReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e AppealReviewReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e AppealReviewReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e AppealReviewReplyValidationError) ErrorName() string {
+	return "AppealReviewReplyValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e AppealReviewReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sAppealReviewReply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = AppealReviewReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = AppealReviewReplyValidationError{}
+
+// Validate checks the field values on AuditAppealRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *AuditAppealRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on AuditAppealRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// AuditAppealRequestMultiError, or nil if none found.
+func (m *AuditAppealRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *AuditAppealRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if m.GetAppealId() <= 0 {
+		err := AuditAppealRequestValidationError{
+			field:  "AppealId",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.GetReviewId() <= 0 {
+		err := AuditAppealRequestValidationError{
+			field:  "ReviewId",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.GetStatus() <= 0 {
+		err := AuditAppealRequestValidationError{
+			field:  "Status",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetOpUser()) < 2 {
+		err := AuditAppealRequestValidationError{
+			field:  "OpUser",
+			reason: "value length must be at least 2 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetOpReason()) < 2 {
+		err := AuditAppealRequestValidationError{
+			field:  "OpReason",
+			reason: "value length must be at least 2 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.OpRemarks != nil {
+		// no validation rules for OpRemarks
+	}
+
+	if len(errors) > 0 {
+		return AuditAppealRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// AuditAppealRequestMultiError is an error wrapping multiple validation errors
+// returned by AuditAppealRequest.ValidateAll() if the designated constraints
+// aren't met.
+type AuditAppealRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m AuditAppealRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m AuditAppealRequestMultiError) AllErrors() []error { return m }
+
+// AuditAppealRequestValidationError is the validation error returned by
+// AuditAppealRequest.Validate if the designated constraints aren't met.
+type AuditAppealRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e AuditAppealRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e AuditAppealRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e AuditAppealRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e AuditAppealRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e AuditAppealRequestValidationError) ErrorName() string {
+	return "AuditAppealRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e AuditAppealRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sAuditAppealRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = AuditAppealRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = AuditAppealRequestValidationError{}
+
+// Validate checks the field values on AuditAppealReply with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *AuditAppealReply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on AuditAppealReply with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// AuditAppealReplyMultiError, or nil if none found.
+func (m *AuditAppealReply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *AuditAppealReply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return AuditAppealReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// AuditAppealReplyMultiError is an error wrapping multiple validation errors
+// returned by AuditAppealReply.ValidateAll() if the designated constraints
+// aren't met.
+type AuditAppealReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m AuditAppealReplyMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m AuditAppealReplyMultiError) AllErrors() []error { return m }
+
+// AuditAppealReplyValidationError is the validation error returned by
+// AuditAppealReply.Validate if the designated constraints aren't met.
+type AuditAppealReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e AuditAppealReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e AuditAppealReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e AuditAppealReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e AuditAppealReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e AuditAppealReplyValidationError) ErrorName() string { return "AuditAppealReplyValidationError" }
+
+// Error satisfies the builtin error interface
+func (e AuditAppealReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sAuditAppealReply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = AuditAppealReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = AuditAppealReplyValidationError{}
 
 // Validate checks the field values on UpdateReviewRequest with the rules
 // defined in the proto definition for this message. If any rules are
